--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
 	<h1>Hello World!</h1>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing, elit. Voluptatibus vero aliquam cumque expedita, fugit, laudantium iusto porro, numquam sequi, ducimus distinctio similique esse quisquam reprehenderit cum facere eligendi odit beatae.</p>
 </body>
 </html>
